# UbuzimaChain_codextreme_hackthon

./: .env  .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/UbuzimaChain_backend/: UbuzimaChain_backend.wasm  constructor.old.did  index.js  service.did  service.did.d.ts  service.did.js
.dfx/local/canisters/UbuzimaChain_frontend/: index.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
src/UbuzimaChain_backend/: Cargo.toml  UbuzimaChain_backend.did
src/UbuzimaChain_backend/src/: Admin.rs  UbuzimaChain_backend.did  appointment.rs  authentication.rs  backend.did  doctor.rs  errors.rs  lib.rs  medical_records.rs  patients.rs  state.rs  types.rs  utils.rs
src/UbuzimaChain_frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.ts
src/UbuzimaChain_frontend/src/: App.jsx  App.tsx  config.js  index.js  index.scss  main.jsx
src/UbuzimaChain_frontend/src/components/: AdminDashboard.jsx  AppointmentList.jsx  AuthSection.jsx  Dashboard.jsx  DoctorDashboard.jsx  DoctorProfileSection.jsx  ErrorBoundary.jsx  FutureRoadmap.jsx  Home.jsx  Login.jsx  MyProfile.jsx  Navigation.jsx  PatientDashboard.jsx  PatientRegistration.jsx  PrivateRoute.jsx  Register.jsx
src/declarations/UbuzimaChain_backend/: UbuzimaChain_backend.did.js  index.d.ts
src/declarations/UbuzimaChain_frontend/: index.d.ts  index.js
(+45 files in other folders)
