[package]
name = "UbuzimaChain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"
async-trait = "0.1.68"